--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,13 +1,26 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>home</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">home</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+<ion-menu contentId="main-content">
+  <ion-toolbar></ion-toolbar>
+    <ion-item lines="none" class="ion-margin-left">
+      Home
+    </ion-item>
+    <ion-item lines="none">
+      Favorite
+    </ion-item>
+    <ion-item lines="none">
+      Recent Search
+    </ion-item>
+  <ion-content class="ion-padding"></ion-content>
+</ion-menu>
+<div class="ion-page" id="main-content">
+  <ion-content class="ion-padding"> 
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>
+          <img src="../../../assets/logo_splash.png" height="24" width="113"/>
+        </ion-title>
+      </ion-toolbar>
+      {{weatherData}}
+  </ion-content>
+</div>
