--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -12,7 +12,9 @@ ion-toolbar {
     --background: none;
     color: white;
 }
-
+ion-searchbar.custom{
+    
+}
 .currentDate {
     display: block;
     margin: auto;
@@ -77,9 +79,7 @@ ion-toolbar {
     font-weight: 500;
     letter-spacing: 0;
     line-height: 61px;
-    text-align: center;
-    display: block;
-    margin: auto;
+    text-align: right;
     position: relative;
     top: 150px;
 }
@@ -87,21 +87,66 @@ ion-toolbar {
 .switch {
     position: relative;
     top: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 60px;
+    display: block;
+    margin: auto;
 }
 
 ion-segment {
-    width: 100px;
-    height: 50px;
+    width: 60px;
+    height: 30px;
+    border: 1px solid white;
+    --border-radius: none;
 
     ion-segment-button {
-        --color-checked: #fff;      
+        --color-checked: #fff;
+        --border-radius: none;
+        min-height: 30px;
+        min-width: 35px;
+        margin: auto;
+        padding: auto;
+
         ion-label {
             color: #E32843;
             font-family: Roboto;
             font-size: 16px;
+            text-align: right;
         }
+    }
+}
+
+.description {
+    height: 21px;
+    width: 108px;
+    color: #FFFFFF;
+    font-family: Roboto;
+    font-size: 18px;
+    letter-spacing: 0;
+    line-height: 21px;
+    text-align: center;
+    position: relative;
+    top: 150px;
+}
+
+ion-footer{
+    position: relative;
+    top: 300px;
+    // * {
+    //     border: 1px solid black;
+    // }
+    .minmaxtemp{
+        display: inline-block;
+         color: #fff;
+         font-family: Roboto;
+    }
+    .precipitation{
+        display: inline-block;
+         color: #fff;
+         font-family: Roboto;
+    }
+    .humidity{
+        display: inline-block;
+         color: #fff;
+         font-family: Roboto;
     }
 }
